samples/by-property/invalid/out-invalid.bspl
../../tests/opt/out-invalid.bspl